# heard

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-26-video-transcription-plan.md
docs/superpowers/specs/: 2026-04-26-video-transcription-design.md
src/heard/: audio.py  cli.py  output.py  summarizer.py  transcriber.py
tests/: test_audio.py  test_cli.py  test_output.py  test_summarizer.py  test_transcriber.py
